--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
         "@types/node": "18.11.9",
         "@types/react": "18.0.25",
         "@types/react-dom": "18.0.8",
+        "apollo-server-micro": "^3.11.1",
+        "class-validator": "^0.13.2",
         "eslint": "8.27.0",
         "eslint-config-next": "13.0.2",
+        "graphql": "^15.6.0",
+        "micro": "^9.4.1",
         "next": "13.0.2",
         "prettier": "^2.7.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "reflect-metadata": "^0.1.13",
+        "type-graphql": "^1.1.1",
         "typescript": "4.8.4"
     }
 }
