--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
         "start": "next start",
         "lint": "next lint",
         "check-format": "prettier --ignore-path .eslintignore --check '*/**/*.{js,ts,tsx}'",
-        "format": "prettier --ignore-path .eslintignore --write '*/**/*.{js,ts,tsx}'"
+        "format": "prettier --ignore-path .eslintignore --write '*/**/*.{js,ts,tsx}'",
+        "codegen": "graphql-codegen --config codegen.yml"
     },
     "dependencies": {
+        "@graphql-codegen/cli": "^2.13.11",
+        "@graphql-codegen/typescript": "^2.8.1",
+        "@graphql-codegen/typescript-operations": "^2.5.6",
+        "@graphql-codegen/typescript-urql": "^3.7.3",
         "@types/node": "18.11.9",
         "@types/react": "18.0.25",
         "@types/react-dom": "18.0.8",
@@ -26,6 +31,7 @@
         "react-dom": "18.2.0",
         "reflect-metadata": "^0.1.13",
         "type-graphql": "^1.1.1",
-        "typescript": "4.8.4"
+        "typescript": "4.8.4",
+        "urql": "^3.0.3"
     }
 }
