--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "reflect-metadata": "^0.1.13",
+        "styled-components": "^5.3.6",
         "type-graphql": "^1.1.1",
         "typescript": "4.8.4",
         "urql": "^3.0.3"
+    },
+    "resolutions": {
+        "styled-components": "^5.3.6"
     }
 }
