--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-dom": "18.2.0",
         "reflect-metadata": "^0.1.13",
         "styled-components": "^5.3.6",
+        "styled-reset": "^4.4.2",
         "type-graphql": "^1.1.1",
         "typescript": "4.8.4",
         "urql": "^3.0.3"
