--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     },
     "resolutions": {
         "styled-components": "^5.3.6"
+    },
+    "devDependencies": {
+        "@types/styled-components": "^5.1.26"
     }
 }
