--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
+        "lint": "npm run check-format && eslint '*/**/*.{js,ts,tsx}'",
         "check-format": "prettier --ignore-path .eslintignore --check '*/**/*.{js,ts,tsx}'",
         "format": "prettier --ignore-path .eslintignore --write '*/**/*.{js,ts,tsx}'",
         "codegen": "graphql-codegen --config codegen.yml"
@@ -33,13 +33,18 @@
         "styled-components": "^5.3.6",
         "styled-reset": "^4.4.2",
         "type-graphql": "^1.1.1",
-        "typescript": "4.8.4",
+        "typescript": "^4.8.4",
         "urql": "^3.0.3"
     },
     "resolutions": {
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
-        "@types/styled-components": "^5.1.26"
+        "@trivago/prettier-plugin-sort-imports": "^3.4.0",
+        "@types/styled-components": "^5.1.26",
+        "@typescript-eslint/eslint-plugin": "^5.42.1",
+        "@typescript-eslint/parser": "^5.42.1",
+        "eslint-plugin-react": "^7.31.10",
+        "eslint-plugin-unused-imports": "^2.0.0"
     }
 }
